--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "questionnaire-model",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "Questionnaire Model",
   "main": "./dist/main.js",
   "types": "./dist/main.d.ts",
-  "author": "chardon55",
+  "author": {
+    "name": "chardon55",
+    "email": "charlesdong_2000@outlook.com",
+    "url": "https://github.com/chardon55"
+  },
   "license": "MIT",
   "publishConfig": {
     "access": "public"
