--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "questionnaire-model",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "Questionnaire Model",
   "main": "./dist/main.js",
   "types": "./dist/main.d.ts",
@@ -17,7 +17,8 @@
     "typescript": "^4.4.2"
   },
   "scripts": {
-    "build": "tsc",
+    "build": "yarn clean && tsc",
+    "clean": "node ./clean.js",
     "start": "yarn build && node .",
     "publish": "yarn build"
   }
