--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "name": "questionnaire-model",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "Questionnaire Model",
   "main": "./dist/main.js",
   "types": "./dist/main.d.ts",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/chardon55/questionnare-model.git"
+  },
   "author": {
     "name": "chardon55",
     "email": "charlesdong_2000@outlook.com",
