--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "questionnaire-model",
-  "version": "0.1.5",
+  "version": "0.2.0",
   "description": "Questionnaire Model",
   "main": "./dist/main.js",
   "types": "./dist/main.d.ts",
@@ -21,5 +21,9 @@
     "clean": "node ./clean.js",
     "start": "yarn build && node .",
     "publish": "yarn build"
-  }
+  },
+  "files": [
+    "./dist/main.js",
+    "./dist/main.d.ts"
+  ]
 }
