--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,9 +10,9 @@
     },
     "exclude": [
         "node_modules",
-        "dist"
+        "**/*.spec.ts"
     ],
     "include": [
-        "src"
+        "src/**/*"
     ]
 }
