--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "questionnaire-model",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "Questionnaire Model",
   "main": "./dist/main.js",
   "types": "./dist/main.d.ts",
@@ -23,7 +23,6 @@
     "publish": "yarn build"
   },
   "files": [
-    "./dist/main.js",
-    "./dist/main.d.ts"
+    "dist"
   ]
 }
