--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "questionnaire-model",
-  "version": "0.2.2",
+  "version": "0.2.3",
   "description": "Questionnaire Model",
-  "main": "./dist/main.js",
-  "types": "./dist/main.d.ts",
+  "main": "./index.js",
+  "types": "./index.d.ts",
   "author": {
     "name": "chardon55",
     "email": "charlesdong_2000@outlook.com",
@@ -23,6 +23,8 @@
     "publish": "yarn build"
   },
   "files": [
-    "dist"
+    "dist",
+    "index.js",
+    "index.d.ts"
   ]
 }
