--- a/package.json
+++ b/package.json
@@ -14,13 +14,17 @@
     "access": "public"
   },
   "devDependencies": {
+    "@testdeck/mocha": "^0.1.2",
+    "@types/mocha": "^9.0.0",
+    "mocha": "^9.1.1",
     "typescript": "^4.4.2"
   },
   "scripts": {
     "build": "yarn clean && tsc",
     "clean": "node ./clean.js",
     "start": "yarn build && node .",
-    "publish": "yarn build"
+    "publish": "yarn build",
+    "test": "yarn build && mocha --timeout 500000"
   },
   "files": [
     "dist",
